// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense summary with expenses 1`] = `
<div>
  <p>
    Viewing 
    1
     
     expense 
     totalling 
    $2.35
  </p>
</div>
`;

exports[`should render Expense summary with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    23
     
     expenses 
     totalling 
    $236,423,632.65
  </p>
</div>
`;
